Closed Bug 1806930 Opened 2 years ago Closed 1 year ago

Intermittent /css/css-contain/content-visibility/content-visibility-auto-state-changed-first-observation.html | single tracking bug

Categories

(Core :: Layout, defect, P5)

defect

Tracking

()

RESOLVED FIXED
124 Branch
Tracking Status
firefox124 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: jihye)

References

Details

(Keywords: intermittent-failure, intermittent-testcase, Whiteboard: [retriggered], [wptsync upstream])

Attachments

(2 files)

Filed by: ctuns [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=400420553&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/EpdfGJKiSkar4mBGnuBu4w/runs/0/artifacts/public/logs/live_backing.log


[task 2022-12-21T23:44:59.785Z] 23:44:59     INFO - TEST-START | /css/css-contain/content-visibility/content-visibility-auto-state-changed-first-observation.html
[task 2022-12-21T23:44:59.788Z] 23:44:59     INFO - Closing window a011785b-73d1-44d8-9082-0827dd5fc317
[task 2022-12-21T23:44:59.974Z] 23:44:59     INFO - 
[task 2022-12-21T23:44:59.974Z] 23:44:59     INFO - TEST-UNEXPECTED-FAIL | /css/css-contain/content-visibility/content-visibility-auto-state-changed-first-observation.html | ContentVisibilityAutoStateChange fires once when added (not skipped) - promise_test: Unhandled rejection with value: "unexpected skipped"
[task 2022-12-21T23:44:59.976Z] 23:44:59     INFO - .
[task 2022-12-21T23:44:59.976Z] 23:44:59     INFO - TEST-OK | /css/css-contain/content-visibility/content-visibility-auto-state-changed-first-observation.html | took 191ms

There is meta annotations for content-visibility-auto-state-changed-first-observation.html, but the test works completely now.
This patch removes the unnecessary meta annotations.

Assignee: nobody → jihye
Attachment #9364075 - Attachment description: Bug 1806930 - Remove unnecessary meta annotations for content-visibility-auto-state-changed-first-observation.html → Bug 1806930 - Remove unnecessary meta annotations for /css/css-contain/content-visibility/content-visibility-auto-state-changed-first-observation.html
Status: NEW → ASSIGNED

I tried with local Linux builds.

I can reproduce with a --disable-optimize --enable-debug build with the command

./mach wpt  --rerun 10  --pause-on-unexpected /css/css-contain/content-visibility/content-visibility-auto-state-changed-first-observation.html

or with a --disable-optimize --disable-debug build with the command

./mach wpt  --rerun 10 --verify-chaos-mode --pause-on-unexpected --debugger=rr /css/css-contain/content-visibility/content-visibility-auto-state-changed-first-observation.html
Flags: needinfo?(jihye)

I tried this locally in macOS, and I didn't see any failures.

Flags: needinfo?(jihye)

OK let's keep this open as it seems still valid.

Pushed by cathiechen@igalia.com: https://hg.mozilla.org/integration/autoland/rev/5cb6a4cd6ed2 Intermittent /css/css-contain/content-visibility/content-visibility-auto-state-changed-first-observation.html, r=fredw
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/44292 for changes under testing/web-platform/tests
Whiteboard: [retriggered] → [retriggered], [wptsync upstream]
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 124 Branch
Upstream PR merged by moz-wptsync-bot
Upstream PR merged by moz-wptsync-bot
Regressions: 1881057
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: