Bug 1806930 - Intermittent /css/css-contain/content-visibility/content-visibility-auto-state-changed-first-observation.html, r=fredw

Differential Revision: https://phabricator.services.mozilla.com/D198602